<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/movie_title"
            android:contentDescription="@string/movie_poster" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/release_date" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/release_date" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/release_date"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/movie_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/movie_rating"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            android:text="@string/popularity" />

        <TextView
            android:id="@+id/movie_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/movie_popularity"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            android:text="@string/genres" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/movie_overview"
            app:layout_constraintTop_toBottomOf="@id/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
